# -

./: .gitignore  pubspec.yaml
android/: build.gradle.kts
android/app/: build.gradle.kts
backend/: alembic.ini  main.py  pyproject.toml  test.py
backend/alembic/: env.py
backend/alembic/versions/: 17a27f8e073e_initial_migration.py
backend/app/api/v1/endpoints/: auth.py
backend/app/core/: config.py  security.py
backend/app/db/: database.py
backend/app/models/: __init__.py  account.py  budget.py  category.py  debt.py  goal.py  regular_payment.py  transaction.py  user.py
backend/app/schemas/: account.py  category.py  transaction.py  user.py
lib/: main.dart
lib/models/: user.dart
lib/providers/: auth_provider.dart  theme_provider.dart
lib/screens/: home_screen.dart  login_screen.dart  settings_screen.dart
lib/services/: api_service.dart  auth_service.dart
lib/themes/: accent_colors.dart  app_theme.dart  dark_theme.dart  light_theme.dart
lib/widgets/: accent_color_picker.dart  theme_switch.dart
